pages/am/2.x/quickstart/register-app.adoc
= Register your first client
:page-sidebar: am_2_x_sidebar
:page-permalink: am/2.x/am_quickstart_register_app.html
:page-folder: am/quickstart
:page-layout: am

This guide walks you through the process of creating your first client by using the Gravitee.io AM Management UI.

NOTE: Gravitee.io Access Management UI can be accessed using the following URL :
http://GRAVITEEIO-AM-UI-HOST (see link:{{ '/am/2.x/am_installguide_portal.html' | relative_url }}[Gravitee.io AM Management UI installation^] for more information)

NOTE: If you are running Gravitee.io AM thanks to our link:{{ '/am/2.x/am_installguide_docker.html#docker_compose' | relative_url }}[Docker Compose], the http://GRAVITEEIO-AM-UI-HOST must be https://localhost/am/ui

== Create a security domain

A _security domain_ is a series of security policies apply to a set of applications that all share common security mechanisms for authentication, authorization and identity management.

. Go to http://GRAVITEEIO-AM-UI-HOST. (Default Administrator account is `admin/adminadmin`)
. From the homepage, go to user menu (top right) and click `Global settings`
. From the domains page, click `(+)` button
. Give your security domain a *name*, a *description* and press `SAVE`
. Last step, enable your domain by clicking on the banner `click here` link.

[source]
----
# create domain
curl -H "Authorization: Bearer :accessToken" \
     -H "Content-Type:application/json;charset=UTF-8" \
     -X POST \
     -d '{"name":"My First Security Domain","description":"My First Security Domain description"}' \
     http://GRAVITEEIO-AM-MGT-API-HOST/management/domains


# enable domain
curl -H "Authorization: Bearer :accessToken" \
     -H "Content-Type:application/json;charset=UTF-8" \
     -X PUT \
     -d '{"name":"My First Security Domain","description":"My First Security Domain description", enabled: true}' \
     http://GRAVITEEIO-AM-MGT-API-HOST/management/domains/:domainId
----

== Create your client

Before interact with the AM Authorization Gateway, you must create a client.
The client represents your application and will give you the necessary information (like the client ID/client Secret) for sign-in, authorization, authentication and identity management.
The application can be a native mobile app, a single page front-end web app, or a regular web app that executes on a server.

Create your first client by following these steps :

. Go to the previously created security domain's page (you can switch between domains via the user menu)
. Go to `Clients` section
. From the security domain's clients page, click `(+)` button
. Choose an *Client ID* and press `SAVE`

NOTE: You can specify an *Client Secret* value or leave it blank to generate a random one

[source]
----
curl -H "Authorization: Bearer :accessToken" \
     -H "Content-Type:application/json;charset=UTF-8" \
     -X POST \
     -d '{"clientId":"THE-CLIENT-ID"}' \
     http://GRAVITEEIO-AM-MGT-API-HOST/management/domains/:domainId/clients
----

[start=5]
. From the resulting OAuth client create form, you can copy the Client ID and the Client Secret to start interacting with Gravitee.io AM endpoints and APIs.

image::{% link images/am/2.x/graviteeio-am-oauth-client.png %}[]

== Test your application with OAuth2

OAuth 2 is an authorization framework that let applications acting on behalf the end user to obtain limited access to HTTP services.
link:https://tools.ietf.org/html/rfc6749[OAuth 2 RFC^] defines two endpoints :

- The *authorization endpoint* used to interact with the resource owner and obtain an authorization grant via user-agent redirection.
- The *token endpoint* used by the client to obtain an access token by presenting its authorization grant.

NOTE: For further information about OAuth2, please visit the link:https://tools.ietf.org/html/rfc6749[RFC page^].

In order to validate the application configuration, we will request for an access token.

`POST http://GRAVITEEIO-AM-GATEWAY-HOST/:securityDomainPath/oauth/token`

[width="100%",cols="2,8",frame="topbot",options="header,footer"]
|==========================
|Parameter       |Description
|grant_type      |*REQUIRED.* Set the value to `client_credentials`.
|client_id       |*REQUIRED.* Client's ID.
|client_secret   |*REQUIRED.* Client's secret.
|scope           |*OPTIONAL.* The scopes of the access token.
|==========================

Request a token::

[source]
----
curl -X POST \
  'http://GRAVITEEIO-AM-GATEWAY-HOST/:securityDomainPath/oauth/token?grant_type=client_credentials&scope=read&client_id=:clientId&client_secret=:clientSecret'
----

NOTE: You can also specify the client credentials by providing `client_id` and `client_secret` in  `Authorization` header with the Basic auth scheme.

If everything goes well, you should see the following response :

[source]
----
HTTP/1.1 200 OK
Content-Type: application/json;charset=UTF-8
Cache-Control: no-cache, no-store, max-age=0, must-revalidate
Pragma: no-cache
{
    "access_token": "b7d0afc4-c96d-40d4-90af-c4c96d20d4c7",
    "token_type": "bearer",
    "expires_in": 7199,
    "scope": "read"
}
----